test/cases/compile_errors/invalid_break_expression.zig
export fn f() void {
    break;
}

// error
// backend=stage2
// target=native
//
// :2:5: error: break expression outside loop
